# lavender

./: .clang-format  .config  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Kconfig  LICENSE.md  Makefile  Makefile.dospc  Makefile.windows  README.md  azure-pipelines.yml  cga.asm  cgihisym.pbm  com.ld  ia16x.config  lavender.asm  requirements.txt  slides.txt  sources.mk  strings.asm  tiny.config  vii.asm
.github/: enter-ow.ps1  enter-winsdk.ps1  fetch-dos.sh  fetch-mingw.sh  fetch-ow.ps1  fetch-winsdk.ps1  prepare-dos.sh
.github/workflows/: build.yml
cmake/: DOS-GCC-IA16.cmake  dotconfig.cmake  extensions.cmake  version.cmake  version.h.in
cmake/scripts/: bundle.cmake  version.cmake  version.txt.in
cmake/toolchains/: gcc.cmake  msvc.cmake  watcom.cmake
config/: Kconfig.dos  Kconfig.linux  dos-ia16x.defconfig
data/: celolg73.pbm  celolg99.pbm  hellodes.enc  helltdes.enc  lavndr58.pbm  lavndr73.pbm  lavndr99.pbm  presskey.txt  sheba.mid  slides.txt
docs/: lard.md  slides.md  spk.md
inc/: base.h  bios.inc  c16.mac  cga.inc  crg.h  cvt.h  dev.h  dlg.h  drv.h  enc.h  err.h  err.inc  fnt.inc  gfx.h  gfx.inc  ker.h  ker.inc  line.inc  list.h  net.h  nls.h  pal.h  pic.inc  sld.h  sld.inc  snd.h  str.inc  uni.inc  version.rh  vid.h  vid.inc  zip.inc
inc/api/: bios.h  bios.inc  dos.h  dos.inc  msmouse.h  winoldap.h
inc/arch/: dos.h  linux.h  sdl2.h  windows.h  zip.h
inc/ard/: action.h  config.h  ui.h  version.h
src/: CMakeLists.txt  Kconfig  cga.asm  dos.cmake  err.asm  fnt.asm  ker.asm  lavender.asm  lavender.exe.manifest  line.inc  lineexec.asm  lineread.asm  linux.cmake  main.asm  main.c  messages.S  resource.CSY.rc  resource.ENU.rc  resource.PLK.rc  resource.h  rstd.c  sldex.asm  sldld.asm  str.asm  strings.asm  strings.inc  version.rc  windows.cmake  zip.asm
src/ard/: CMakeLists.txt  compat.c  config.c  deps.c  resource.h  ui.c  winmain.c
src/ard/action/: _exec.c  instie.c  instredist.c  run.c  rundos.c  select.c
src/ard/resource/: _neutral.rc  cs-cz.rc  en-us.rc  pl-pl.rc
src/ard/version/: cpu.c  dll.c  ie.c  windows.c
src/crg/: CMakeLists.txt  crg.c  crg_impl.h  des.c  des.h  keyutils.c  messages.S  module.mk  prompt.c  splitkey.c  xor.c
src/cvt/: module.mk  unicode.c
src/dlg/: CMakeLists.txt  frame.c  fullscrn.c  input.c  messages.S  module.mk  prompt.rc  resource.h  text.c  windows.c
src/enc/: CMakeLists.txt  Kconfig  access.c  des.c  enc.c  enc_impl.h  keyutils.c  xor.c
src/enc/cipher/: CMakeLists.txt  des.c  xor.c
src/enc/keyfmt/: CMakeLists.txt  le.c  pkey25.c
src/enc/provider/: CMakeLists.txt  caller.c  diskid.c  prompt.c  remote-qr.cpp  remote.c  split.c
src/enc/provider/remote/: CMakeLists.txt  ccode.c  inet.c  qr.c  rcode.c  remote.c  remote.h
src/enc/provider/remote/json/: CMakeLists.txt  encjson.h  lib.c  parser.c
src/enc/provider/remote/qr/: CMakeLists.txt  encqr.h  generate.c  lib.cpp
src/enc/qr/: generate.c  lib.cpp
src/enc/ui/: CMakeLists.txt  common.c  encui.h  fullscrn.c  prompt.rc  resource.h  windows.c
src/enc/ui/direct/: CMakeLists.txt  bitmap.cpp  button.cpp  checkbox.c  checkbox.cpp  direct.c  direct.h  frame.c  frame.cpp  label.cpp  option.cpp  panel.cpp  test.cpp  text.c  textbox.c  textbox.cpp  widgets.hpp
src/fmt/: CMakeLists.txt  bmp.c  exe.c  iff.c  midi.c  module.mk  pbm.c  utf8.c  zip.c
src/gfx/: CMakeLists.txt  cga.c  color.c  dosddi.c  ega.c  errno.c  font-8x14.c  font-8x8.c  gdi.c  glyph.h  messages.S  messages.asm  module.mk  pbm.asm  pbm.c  sdl2.c  vbe.c
src/ker/: error.asm  error.c  info.asm  info.c  init.asm  int.asm  int.c  messages.S  messages.asm  module.mk  player.c  start.asm  start.c  string.asm  time.asm  time.c  unicode.asm  unicode.c  zip.asm  zip.c
src/net/: CMakeLists.txt  curl.c  wininet.c
src/pal/: CMakeLists.txt  Kconfig  dospc.S  dospc.c  dospc.h  evtmouse.h  linux.S  linux.c  log.c  module.mk  pal_impl.h  pp.c  sdl2.c  sdl2arch.c  strings.c  test.c  windows.c  ziparch.c
src/pal/_sdl2/: CMakeLists.txt  impl.h  p-handle.c  p-keyboard.c  s-font.c  s-init.c  s-present.c
src/pal/_zip/: CMakeLists.txt  pa-close.c  pa-data.c  pa-enum.c  pa-extract.c  pa-load.c  pa-open.c  pa-read.c  pa-size.c  z-init.c
src/pal/dos/: CMakeLists.txt  Kconfig  d-beep.c  d-driver.c  d-info.c  d-xm.c  divmod.c  dos.c  dos.h  hw.h  impl.h  p-alert.c  p-cache.c  p-handle.c  p-id.c  p-init.c  p-keyboard.c  p-mouse.c  p-state.c  p-time.c  p-volume.c  p-wchar.c  pit.S  pit.c
src/pal/dos/test/: CMakeLists.txt  p-cache.cpp
src/pal/dos/test/inc/: dos.h
src/pal/dos/test/inc/mock/: fmem.hpp  xmem.hpp
src/pal/dos/test/mock/: fmem.cpp  xmem.cpp
src/pal/inc/: assets.h  evtmouse.h
src/pal/linux/: CMakeLists.txt  impl.h  l-info.c  p-alert.c  p-cache.c  p-id.c  p-init.c  p-shell.c  p-state.c  p-time.c  p-volume.c
src/pal/shared/: p-mouse.c  p-strings.c  p-version.c
src/pal/windows/: CMakeLists.txt  about.c  impl.h  p-alert.c  p-cache.c  p-handle.c  p-id.c  p-init.c  p-keyboard.c  p-shell.c  p-state.c  p-strings.c  p-time.c  p-version.c  p-volume.c  strutil.c  w-font.c  w-hwnd.c  w-version.c  windows.c  winmain.c  wndproc.c
src/resource/: _neutral.rc  _version.rc  cs-cz.rc  en-us.rc  pl-pl.rc
src/sld/: CMakeLists.txt  actarea.c  bitmap.c  call.c  context.c  entryex.asm  entryld.asm  exentry.c  exslides.c  fnlabel.c  jump.c  ldentry.c  loader.c  messages.S  messages.asm  module.mk  play.c  protect.c  query.c  rnscript.c  runner.c  shape.c  sld_impl.h  string.asm  text.c
src/snd/: CMakeLists.txt  Kconfig  beepemu.c  buf.c  dbeep.c  dfluid.c  dmme.c  dmpu401.c  dopl2.c  dpcspk.c  drivers.c  fmidi.c  fspk.c  gm-opl2.c  messages.S  module.mk  opl2.h  pcspk.c  pcspkemu.c  seq.c  snd.c  spk.c
src/tools/: bits.hpp  deckey.cpp  enckey.cpp  key.hpp  module.mk
src/vid/: cga.asm  cga.c  font-8x8.c  font.S  font.asm  glyph.h  messages.S  messages.asm  module.mk  vbe.c
targets/: Kconfig.linux  Kconfig.windows  dos-ia16-com.defconfig
tools/: bits.hpp  cdkey.py  crypt.py  deckey.cpp  des.py  enckey.cpp  key.hpp  key.py  service.py  strconv.py  unlock.py  xor.cpp  xor.py
(+53 files in other folders)
