add_library(snd OBJECT)

target_sources(snd PRIVATE drivers.c)
target_sources(snd PRIVATE snd.c)
target_sources(snd PRIVATE buf.c)
target_sources(snd PRIVATE seq.c)

if(DOS)
    target_sources(snd PRIVATE dbeep.c)
    if(NOT CONFIG_ANDREA)
        target_sources(snd PRIVATE dmpu401.c)
        target_sources(snd PRIVATE gm-opl2.c)
        target_sources(snd PRIVATE dopl2.c)
    else()
        add_driver(sndmpu)
        target_sources(sndmpu PRIVATE dmpu401.c)

        add_driver(sndopl)
        target_sources(sndopl PRIVATE gm-opl2.c)
        target_sources(sndopl PRIVATE dopl2.c)
    endif()
endif()

if(WIN32)
    target_sources(snd PRIVATE dmme.c)
endif()

if(LINUX)
    target_sources(snd PRIVATE dfluid.c)
    target_sources(snd PRIVATE dbeep.c)
    target_sources(snd PRIVATE beepemu.c)
endif()
